--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,12 @@
                 <p>{{.}}</p>
             {{- end }}
 
+            <ul>
+                {{ range .Site.Taxonomies.categories }}
+                    <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> {{ .Count }}</li>
+                {{ end }}
+            </ul>
+
             {{- with .Site.Params.social }}
                 <div>
                     {{ partial "social-icons.html" . }}
